--- a/public/cams.html
+++ b/public/cams.html
@@ -2,12 +2,17 @@
   <head>
     <title>Brooklyn CCTV Cams</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/css/font-awesome.css" />
     <script type="text/javascript" src="/js/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="/js/mustache.js"></script>
     <script type="text/javascript" src="/js/update_images.js"></script>
   </head>
   <body>
     <div id="main">
+      <div id="controls">
+            <a href="#" class="icon-pause" id="pause"></a>
+      </div>
+      
       <div id="cams">
 
       </div>
