load different areas of the city

--- a/public/cams.html
+++ b/public/cams.html
@@ -11,6 +11,14 @@
     <div id="main">
       <div id="controls">
         <a href="#" class="icon-pause" id="pause" title="Pause"></a>
+        <select name="" id="region_chooser">
+            <option value="brooklyn_cams">Brooklyn</option>
+            <option value="manhattan_cams">Manhattan</option>
+            <option value="bronx_cams">Bronx</option>
+            <option value="queens_cams">Queens</option>
+            <option value="staten_cams">Staten Island</option>
+        </select>
+        <div class="clear"></div>
       </div>
       
       <div id="cams">
