--- a/public/cams.html
+++ b/public/cams.html
@@ -25,5 +25,10 @@
 
       </div>
     </div>
+    <div class="clear"></div>
+    <div id="self_promotion">
+      Created by <a href="http://github.com/okor">okor</a> | <a href="http://twitter.com/okor">@okor</a> | aka Jason Ormand
+    </div>
+    <a href="https://github.com/okor/nyc_cctv"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
   </body>
 </html>
