starting size option

--- a/public/cams.html
+++ b/public/cams.html
@@ -11,13 +11,38 @@
     <div id="main">
       <div id="controls">
         <a href="#" class="icon-pause" id="pause" title="Pause"></a>
-        <select name="" id="region_chooser">
+
+        <label for="region_chooser">Region:</label>
+        <select name="region_chooser" id="region_chooser">
             <option value="brooklyn_cams">Brooklyn</option>
             <option value="manhattan_cams">Manhattan</option>
             <option value="bronx_cams">Bronx</option>
             <option value="queens_cams">Queens</option>
             <option value="staten_cams">Staten Island</option>
         </select>
+
+        <label for="interval_chooser">Refresh:</label>
+        <select name="interval_chooser" id="interval_chooser">
+            <option value="1000">1 sec</option>
+            <option value="2000">2 sec</option>
+            <option selected value="3000">3 sec</option>
+            <option value="4000">4 sec</option>
+            <option value="5000">5 sec</option>
+            <option value="6000">6 sec</option>
+            <option value="7000">7 sec</option>
+            <option value="8000">8 sec</option>
+            <option value="9000">9 sec</option>
+            <option value="10000">10 sec</option>
+        </select>
+
+        <label for="size_chooser">Size:</label>
+        <select name="interval_chooser" id="interval_chooser">
+            <option value="small">Small/option>
+            <option value="medium">Medium</option>
+            <option selected value="large">Large</option>
+        </select>
+
+
         <div class="clear"></div>
       </div>
       
