--- a/public/cams.html
+++ b/public/cams.html
@@ -1,59 +1,58 @@
 <html>
   <head>
-    <title>Brooklyn CCTV Cams</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="/css/font-awesome.css" />
-    <script type="text/javascript" src="/js/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="/js/mustache.js"></script>
-    <script type="text/javascript" src="/js/update_images.js"></script>
+	<title>Brooklyn CCTV Cams</title>
+	<link rel="stylesheet" type="text/css" href="/css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="/css/font-awesome.css" />
+	<script type="text/javascript" src="/js/jquery-1.8.2.min.js"></script>
+	<script type="text/javascript" src="/js/mustache.js"></script>
+	<script type="text/javascript" src="/js/update_images.js"></script>
   </head>
   <body>
-    <div id="main">
-      <div id="controls">
-        <a href="#" class="icon-pause" id="pause" title="Pause"></a>
+		<div id="controls">
+			<a href="#" class="icon-pause" id="pause" title="Pause"></a>
 
-        <label for="region_chooser">Region:</label>
-        <select name="region_chooser" id="region_chooser">
-            <option value="brooklyn_cams">Brooklyn</option>
-            <option value="manhattan_cams">Manhattan</option>
-            <option value="bronx_cams">Bronx</option>
-            <option value="queens_cams">Queens</option>
-            <option value="staten_cams">Staten Island</option>
-        </select>
+			<label for="region_chooser">Region:</label>
+			<select name="region_chooser" id="region_chooser">
+				<option value="brooklyn_cams">Brooklyn</option>
+				<option value="manhattan_cams">Manhattan</option>
+				<option value="bronx_cams">Bronx</option>
+				<option value="queens_cams">Queens</option>
+				<option value="staten_cams">Staten Island</option>
+			</select>
 
-        <label for="interval_chooser">Refresh:</label>
-        <select name="interval_chooser" id="interval_chooser">
-            <option value="1000">1 sec</option>
-            <option value="2000">2 sec</option>
-            <option selected value="3000">3 sec</option>
-            <option value="4000">4 sec</option>
-            <option value="5000">5 sec</option>
-            <option value="6000">6 sec</option>
-            <option value="7000">7 sec</option>
-            <option value="8000">8 sec</option>
-            <option value="9000">9 sec</option>
-            <option value="10000">10 sec</option>
-        </select>
+			<label for="interval_chooser">Refresh:</label>
+			<select name="interval_chooser" id="interval_chooser">
+				<option value="1000">1 sec</option>
+				<option value="2000">2 sec</option>
+				<option selected value="3000">3 sec</option>
+				<option value="4000">4 sec</option>
+				<option value="5000">5 sec</option>
+				<option value="6000">6 sec</option>
+				<option value="7000">7 sec</option>
+				<option value="8000">8 sec</option>
+				<option value="9000">9 sec</option>
+				<option value="10000">10 sec</option>
+			</select>
 
-        <label for="size_chooser">Size:</label>
-        <select name="interval_chooser" id="interval_chooser">
-            <option value="small">Small/option>
-            <option value="medium">Medium</option>
-            <option selected value="large">Large</option>
-        </select>
+			<label for="size_chooser">Size:</label>
+			<select name="size_chooser" id="size_chooser">
+				<option value="small">Small</option>
+				<option selected value="medium">Medium</option>
+				<option value="large">Large</option>
+			</select>
 
+			<div class="clear"></div>
+		</div>
+	  
+	<div id="main">
+	  <div id="cams">
 
-        <div class="clear"></div>
-      </div>
-      
-      <div id="cams">
-
-      </div>
-    </div>
-    <div class="clear"></div>
-    <div id="self_promotion">
-      Created by <a href="http://github.com/okor">okor</a> | <a href="http://twitter.com/okor">@okor</a> | aka Jason Ormand
-    </div>
-    <a href="https://github.com/okor/nyc_cctv"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+	  </div>
+	</div>
+	<div class="clear"></div>
+	<div id="self_promotion">
+	  Created by Jason Ormand | GitHub: <a href="http://github.com/okor">okor</a> | Twitter: <a href="http://twitter.com/okor">@okor</a>
+	</div>
+	<a href="https://github.com/okor/nyc_cctv"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
   </body>
 </html>
