lol this is terrible

--- a/public/cams.html
+++ b/public/cams.html
@@ -13,11 +13,11 @@
 
 			<label for="region_chooser">Region:</label>
 			<select name="region_chooser" id="region_chooser">
-				<option value="brooklyn_cams">Brooklyn</option>
-				<option value="manhattan_cams">Manhattan</option>
-				<option value="bronx_cams">Bronx</option>
-				<option value="queens_cams">Queens</option>
-				<option value="staten_cams">Staten Island</option>
+				<option value="brooklyn">Brooklyn</option>
+				<option value="manhattan">Manhattan</option>
+				<option value="bronx">Bronx</option>
+				<option value="queens">Queens</option>
+				<option value="statenisland">Staten Island</option>
 			</select>
 
 			<label for="interval_chooser">Refresh:</label>
@@ -43,7 +43,7 @@
 
 			<div class="clear"></div>
 		</div>
-	  
+
 	<div id="main">
 	  <div id="cams">
 
