--- a/public/cams.html
+++ b/public/cams.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-	<title>Brooklyn CCTV Cams</title>
+	<title>NYC CCTV Cams</title>
 	<link rel="stylesheet" type="text/css" href="/css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="/css/font-awesome.css" />
 	<script type="text/javascript" src="/js/jquery-1.8.2.min.js"></script>
